--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
 <body>
     <div class="prottoyon-box">
-        <div class="row d-flex align-items-center">
-            <div class="col-2">
+        <div class="d-flex align-items-center justify-content-around">
+            <div class="">
                 <img src="./resources/logo.png" alt="" class="cpi-logo">
             </div>
-            <div class="col-8 text-center">
+            <div class="text-center">
                 <h4>গণপ্রজাতন্ত্রী বাংলাদেশ সরকার</h4>
                 <h5>অধ্যক্ষের কার্যালয় </h5>
                 <h3>চট্টগ্রাম পলিটেকনিক ইনস্টিটিউট</h3>
                 <p>নাছিরাবাদ, চট্টগ্রাম।</p>
             </div>
-            <div class="col-2">
+            <div class="">
                 <p>ক্রমিক নং- <span>000000</span></p>
             </div>
         </div>
